--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
+	<script src="https://www.gstatic.com/firebasejs/6.6.2/firebase-functions.js"></script>
 
 <script>
   // Your web app's Firebase configuration
@@ -31,11 +32,9 @@
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
-</script>
+  var functions = firebase.functions();
 
-<script>
-
-	function updateVauxhallUG () {
+  function updateVauxhallUG () {
 		var addMessage = firebase.functions().httpsCallable('addMessage');
 		addMessage().then(function(result) {
 			console.log(result);
@@ -45,6 +44,6 @@
 		});
 
 	}
-
 </script>
+
 </html>
