--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   var functions = firebase.functions();
 
   function updateVauxhallUG () {
-		var addMessage = firebase.functions().httpsCallable('addMessage');
+		var addMessage = firebase.functions().httpsCallable('helloWorld');
 		addMessage().then(function(result) {
 			console.log(result);
 		  // Read result of the Cloud Function.
